Fix the bug for .news-thum-sw-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -724,7 +724,7 @@ a{
 
 	.news-thum-sm-wrap{
 		width: 100%;
-		height: 370px;
+		height: 400px;
 		background-color: white;
 		float: left;
 	}
@@ -793,7 +793,7 @@ a{
 
 	.news-thum-sm-wrap{
 		width: 100%;
-		height: 370px;
+		height: 420px;
 		background-color: white;
 		float: left;
 	}
@@ -861,7 +861,7 @@ a{
 
 	.news-thum-sm-wrap{
 		width: 100%;
-		height: 400px;
+		height: 420px;
 		background-color: white;
 		float: left;
 	}
@@ -997,7 +997,7 @@ a{
 
 	.news-thum-sm-wrap{
 		width: 100%;
-		height: 400px;
+		height: 420px;
 		background-color: white;
 		float: left;
 	}
